pophelper 1.0.1
===========
* parameter sorttable added to functions tabulateRunsStructure() and tabulateRunsTess(). Useful if unsorted table is required.

pophelper 1.0.0
===========

* completed 16-02-2014
* the first version of the `pophelper` package